--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,16 @@
+// NOTE: the project was originally 2 pages, only the landing page is currently included.
+@import "./grid";
+@import "./variables";
+@import "./mixins";
+
 $nav-pills-link-active-bg: rgb(0, 0, 0, 0.5);
 $nav-pills-border-radius: 10px;
 $nav-link-hover-color: rgb(201, 201, 201);
 $nav-link-padding-x: 1.25rem;
 $nav-link-padding-y: 0.5rem;
+$popover-bg: rgb(0, 0, 0, 0.5);
+$popover-body-color: #fff;
+$font-family-base: $body-font;
 
 @import "~/bootstrap/scss/functions";
 @import "~/bootstrap/scss/variables";
@@ -10,14 +18,8 @@ $nav-link-padding-y: 0.5rem;
 @import "~/bootstrap/scss/mixins";
 @import "~/bootstrap/scss/root";
 @import "~/bootstrap/scss/nav";
+@import "~/bootstrap/scss/popover";
 @import "~/bootstrap/scss/bootstrap-utilities";
-@import "~/bootstrap/scss/_spinners";
-@import "~/bootstrap/scss/modal";
-
-
-@import "./grid";
-@import "./variables";
-@import "./mixins";
 
 %heading-styles {
     padding: 0px 40px;
@@ -33,36 +35,11 @@ $nav-link-padding-y: 0.5rem;
     }
 }
 
-%textarea-styles{
-    flex: 1;
-    max-width: 100%;
-    width: 100%;
-    padding: 12px;
-    border-radius: 0px 0px 10px 10px;
-    border: transparent;
-    background-color: $input-bg-dark;
-    overflow-x: auto;
-    color: $text-color;
-    
-}
-
-%wrapper-width-styles{
-    width: 100%;
-    max-width: 1400px;
-    padding: 0 24px;
-    margin: 0 auto;
-}
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-a{
-    color: $text-color;
-    text-decoration: none;
-    font-size: $button-font-size;
+    cursor: default;
 }
 
 body{
@@ -70,93 +47,13 @@ body{
     font-family: $body-font;
 }
 
-.inputBox-Wrapper{
-    margin: 0 auto;
-    width: 100%;
-}
-
-textarea{
-    @extend %textarea-styles;
-}
-
-.dropdown-wrapper{
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 4px;
-
-    .dropdown{
-        grid-column: span 12;
-        font-size: $dropdown-font-size;
-        padding: 12px;
-        border-radius: 8px;
-    }
-    button{
-        grid-column: span 12;
-    }
-
-    @media (min-width: map-get($breakpoints, sm)) {
-        .dropdown{
-            grid-column: span 8;
-        }
-        button{
-            grid-column: span 4;
-        }
-    }
-}
-
-nav{
-    @include flexbox(row, space-between, center);
-    @extend %wrapper-width-styles;
-    font-family: $body-font;
-    color: $text-color;
-    height: 70px;
-
-    .title{
-        font-family: $title-font;
-    }
-
-    .logo-img{
-        width: 20%;
-        min-width: 70px;
-        max-width: 100px;
-    }
-
-    .back-btn-desk{
-        display: none;
-        border-bottom: 1px solid $accent-color;
-        padding: 6px 0;
-    }
-    .back-btn-mobile{
-        display: block;
-        border-bottom: 1px solid $accent-color;
-        padding: 6px 0;
-        margin-left: 40px;
-    }
-
-    @media (min-width: map-get($breakpoints, lg)) {
-        .title{
-            font-size: 28px;
-        }
-        .back-btn-desk{
-            display: block;
-        }
-        .back-btn-mobile{
-            display: none;
-        }
-    }
+a, button {
+    cursor: pointer;
 }
 
 .subtext {
     text-align: center;
     color: $subtext-color;
-}
-
-.dropdown{
-    width: 50%;
-    font-size: $dropdown-font-size;
-    padding: 12px;
-    border-radius: 8px;
 }
 
 button, .btn{
@@ -165,175 +62,6 @@ button, .btn{
     border-radius: 8px;
     border: none;
     margin-left: 16px;
-}
-
-.icon {
-    margin-left: 8px;
-}
-
-.container{
-    width: 100%;
-    padding: 10px 24px;
-
-}
-
-.valitation-screen {
-    @include flexbox(column, center , center );
-    @extend %wrapper-width-styles;
-    margin: 0px auto;
-    width: 100%;
-    @media (min-width: map-get($breakpoints, lg)) {
-        height: calc(100svh - 70px - 53px);
-        padding: 0 24px;
-    }
-
-    h1 {
-        @extend %heading-styles;
-        color: #DCD64D;
-    }
-
-    h2 {
-        @extend %heading-styles;
-    }
-
-    .modal-inner-wrapper{
-        max-width: 800px;
-        width: 100%;
-    }
-
-    .textBox{
-        @include inputBox($input-bg-dark);
-    }
-
-    .validation-btn-wrap{
-        width: 100%;
-    }
-    .btn-grp{
-        width: 100%;
-    }
-    .btn-grp-wrapper{
-        width: max-content;
-        margin: 0 auto;
-    }
-    .run-btn{
-        @include button(#97A6E6);
-    }
-    
-    #accept-btn{
-        @include button(#BF353D);
-    }
-
-    #keep-btn{
-        @include button(#2669A7);
-    }
-
-    #retry-btn{
-        @include button(#97A6E6);
-    }
-    .textarea-wrapper{
-        position: relative;
-    }
-
-    .spinner-screen{
-        @include flexbox(column,center,center);
-        display: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 10px;
-        background-color: rgba(42,42,42,0.5);
-        backdrop-filter: blur(10px);
-
-        p{
-            color: $text-color;
-            margin-bottom: 30px;
-        }
-        .spinner-wrapper {
-            @include spinner(80px);
-        }
-    }
-
-    
-}
-
-.main-screen{
-    @include flexbox(column, center, center);
-    @extend %wrapper-width-styles;
-    display: none;
-    @media (min-width: map-get($breakpoints, lg)) {
-        height: calc(100svh - 70px - 53px);
-    }
-
-    .inner-wrapper{
-        @include flexbox(column, center, center);
-        position: relative;
-        width: 100%;
-    }
-
-    .textBox{
-        @include inputBox($input-bg-dark);
-    }
-
-    .spinner-screen{
-        @include flexbox(column,center,center);
-        display: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        p{
-            color: $text-color;
-            margin-bottom: 30px;
-        }
-        .spinner-wrapper {
-            @include spinner(30px);
-        }
-    }
-
-    .lang-display{
-        @include flexbox(row, flex-start, center);
-        gap: 4px;
-    }
-
-    .validation-btn-wrap{
-        @include flexbox(row, space-between, center);
-    }
-
-    #translate-btn,  #new-input-btn{
-        width: 100%;
-        @include button(#97A6E6);
-    }
-
-    #confirm-img{
-        @include flexbox(column,center,center);
-        display: none;
-
-        p{
-            color: $text-color;
-            margin-bottom: 30px;
-        }
-    }
-
-    #output{
-        color: $text-color;
-        font-family: monospace;
-        font-size: 0.85rem;
-        overflow-x: auto;
-        padding: 12px;
-    }
-}
-
-
-
-footer{
-    font-size: $body-font-size;
-    color: $text-color;
-    text-align: center;
-    padding: 16px 0 ;
-    border-top: 0.5px solid #adadad;
 }
 
 /*# sourceMappingURL=main.css.map */
